Prevent squishing in ie
Landing page middle buttons.

--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -30,6 +30,7 @@
   align-self: center;
   margin-left: auto;
   margin-right: auto;
+  flex: none;
 
   .width();
   @media @desktop {
